@@ -38,6 +38,8 @@ Print out help for the specified generator, and exit.
 Pretend to be this when someone resets with ATZ or similar
 .IP "-D|--elm-device <device string>"
 Pretend to be this when someone calls AT@1
+.IP "-b|--bluetooth"
+Listen on bluetooth
 .IP "-v|--version"
 Print out version number and exit.
 .IP "-h|--help"
